# holochain_rss

./: .gitignore  Cargo.toml  README.md  build-dna.sh  build.sh  clean.sh  default.nix  holonix.sh
app/rss.dna.workdir/: dna.json
app/zomes/rss/: Cargo.toml
app/zomes/rss/src/: error.rs  lib.rs
dna/rss_pub.dna.workdir/: dna.json
src/: error.rs  main.rs
zomes/rss_pub/: Cargo.toml
zomes/rss_pub/src/: lib.rs
